v0.1.1
---

* Now using getopt in main.sh.
* Moved code to `bin` subfolder.
* Moved output conditions into `conditions` subfolder.
* Moved output plots into `plots` subfolder.
* Added auxillary intermediate data `aux` subfolder.
* Added counts of reads filtered from SAM in the summary.
* Optimized and fixed reads_trim.sh script.
* Modularized main.sh script.
* Moved scripts to separate folder.

v0.1.0
===

Released on 20170313.