@@ -758,7 +758,7 @@ pre {
   -g refGenome  Path to reference genome file. Default: 'hg19'.
   -d bwaIndex   Path to BWA index file. Required if BWA is the selected aligner.
   -f cutsite    Cutsite sequence. Default: 'AAGCTT' (HindIII).
-  -q mapqThr    Mapping quality threshold. Default: 30.
+  -q mapqThr    Mapping quality threshold. Default: 1.
   -p platform   Sequencing platform. Default: 'L'.
   -u umilength  UMI sequence length. Default: 8.
   -r csRange    Range around cutsite for UMI assignment. Default: 40.
@@ -993,6 +993,8 @@ optional arguments:
   -c, --num-proc NUM-PROC       Number of cores for parallel computation.
                                 [default: 1]
   -s, --suffix SUFFIX           Suffix to be added to output files.
+                                [default: '']
+  -r, --rmChr RMCHR             Comma separated chromosomes to remove.
                                 [default: '']
 </code></pre>
 
